objects/ltnadptn__Lightning_Adoption_Report_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>ltnadptn__Can_Use_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Use Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Profile__c</fullName>
        <label>Profile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Snapshot_Time__c</fullName>
        <label>Snapshot Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Users__c</fullName>
        <label># Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Using_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using Lightning</label>
        <type>Checkbox</type>
    </fields>
    <label>Lightning Adoption Report Snapshot</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Lightning Adoption Report Snapshot #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lightning Adoption Report Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>ltnadptn__All</fullName>
        <columns>ltnadptn__Snapshot_Time__c</columns>
        <columns>ltnadptn__Profile__c</columns>
        <columns>ltnadptn__Can_Use_Lightning__c</columns>
        <columns>ltnadptn__Using_Lightning__c</columns>
        <columns>ltnadptn__Users__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>